# grinder

./: .gitignore  CMakeLists.txt  generate.bat  readme.md
apps/demo/: CMakeLists.txt  main.cpp
apps/dev/: CMakeLists.txt  main.cpp
apps/dev/assets/: point_vert.glsl  rgb_triangle_vert.glsl
docs/: project.md
engine/: CMakeLists.txt
engine/assets/shaders/: base_lighting.glsl  blinn_phong_frag.glsl  blinn_phong_vert.glsl  culling.glsl  depth_prepass_frag.glsl  depth_prepass_vert.glsl  emmisive_frag.glsl  light_clusters.glsl  light_culling.glsl  lighting_lit_frag.glsl  lighting_lit_vert.glsl  lighting_textured_frag.glsl  lit_frag copy.glsl  lit_frag.glsl  lit_frag_c.glsl  lit_vert.glsl  postprocess_blur_frag.glsl  postprocess_bright_extract_frag.glsl  postprocess_bright_extract_vert.glsl  postprocess_frag.glsl  rain_particle.frag  rain_particle.vert  rain_particle_frag.glsl  rain_particle_vert.glsl  skybox_frag.glsl  skybox_vert.glsl  textured_frag.glsl  textured_frag_c.glsl  textured_vert.glsl  unlit_frag.glsl  unlit_vert.glsl
engine/include/engine/: Easing.hpp  Tween.hpp  api.hpp  application.hpp  ecs.hpp  engine.hpp  exception.hpp  layer.hpp  log.hpp  particle.hpp  perf_profiler.hpp  renderer.hpp  resource.hpp  scene.hpp  scene_api.hpp  types.hpp  vfs.hpp  window.hpp
engine/libs/glad/include/glad/: glad.h
engine/libs/glad/src/: glad.c
engine/src/: application.cpp  ecs.cpp  exception.cpp  init.cpp  layer.cpp  layer_debug.cpp  layer_gui.cpp  layer_scene.cpp  log.cpp  renderer.cpp  resource.cpp  scene.cpp  vfs.cpp  window.cpp
runtime/: CMakeLists.txt
runtime/src/: main.cpp
